2000-03-29  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* threads.c (scm_init_threads): Pass 0 size to scm_make_smob_type
	for scm_tc16_thread.  As the current COOP threads are written, GC
	is not supposed to manage storage for threads.

	* error.c (scm_error): Don't try to throw an error if
	scm_gc_heap_lock is true.

	* coop.c (coop_finish): New function.  Called at exit.
	(coop_aborthelp): Free thread structures when threads die.
	Finished LinuxThreads compatibility support => COOP threads now
	mesh with LinuxThreads.
	
	* coop-threads.c (scm_call_with_new_thread, scm_spawn_thread):
	Changed SETCDR --> SET_CELL_WORD_1.

	* coop-threads.c (scheme_launch_thread): Set word 1 of handle to 0
	when thread dies.

2000-03-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boolean.h (SCM_TRUE_P):  New macro.

	* boolean.h (SCM_FALSEP, SCM_NFALSEP, SCM_BOOLP), pairs.h
	(SCM_NULLP, SCM_NNULLP):  Use SCM_EQ_P to compare SCM values.

2000-03-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.h (SCM_CONTREGS, SCM_SET_CONTREGS):  New macros to
	access continuation data.

	(SCM_SETJMPBUF):  Deprecated.  Use SCM_SET_CONTREGS instead.

	(SCM_JMPBUF, SCM_DYNENV, SCM_THROW_VALUE, SCM_BASE, SCM_SEQ,
	SCM_DFRAME):  Use SCM_CONTREGS instead of SCM_CHARS to access
	continuation data.

	* continuations.c (scm_make_cont), init.c (start_stack), 
	root.c (scm_internal_cwdr):  Use SCM_SET_CONTREGS instead of
	SCM_SETJMPBUF.

2000-03-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.h (SCM_LENGTH, SCM_SETLENGTH):  Access the length field
	of strings and symbols by using SCM_{SET_}?CELL_WORD_0.

	(SCM_CHARS, SCM_UCHARS, SCM_SETCHARS):  Use SCM_{SET_}?CELL_WORD_1
	to access the char * field of strings and symbols.

2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.h (SCM_NEWCELL, SCM_NEWCELL2):  Use SCM_SET_CELL_TYPE to set
	the type entry of a new cell.  Added a comment about things to
	remember when updating the list of free cells.
